# Create_Own_SLAM_Dataset

./: CMakeLists copy.txt  CMakeLists.txt  package.xml  readme.md
eval/: extract_gazebo_groudth copy.cpp  extract_gazebo_groudth.cpp  groudtruth.txt
launch/: rostopic2picture.launch  run_gazebo.launch  show_groundtruth.launch
scripts/: publish_depth.py
src/: circle.cpp  gazebo_world_parser.cpp  pose_publisher.cpp  teleop_turtle_key_my.cpp
src_save_image/: rostopic2tum.cpp  无用rosbag2tum copy.cpp  暂时不用save_all_images.cpp
urdf/: kinect.urdf.xacro
world/: SimDataset_1.world  SimDataset_2.world  SimDataset_3.world  SimDataset_4.world  SimDataset_5.world  SimDataset_6.world  kinect.world  nine_desk_drift.world  room_with_objects_on_ground_2.world  show_groundtruth.rviz  tele_control_robot.rviz
world/ObjBbox/: model.config  model.sdf
world/ground_objects_wall_2/: model.config  model.sdf
world/wall_of_room_with_objects_on_ground/: model.config  model.sdf
